# ProDnB

./: .env.example  .gitignore  .nvimlog  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  start_web.sh  todo.md
docs/: PROJECT_README.md  activity.md
prodnb-audio/: Cargo.toml
prodnb-audio/src/: lib.rs  output.rs  render.rs  synth.rs
prodnb-cli/: Cargo.toml
prodnb-cli/src/: main.rs  playback.rs
prodnb-core/: Cargo.toml
prodnb-core/examples/: integration_test.rs  test_parser.rs
prodnb-core/src/: composition.rs  features.rs  framework.rs  genre.rs  lib.rs  protein.rs  rng.rs  strudel.rs  style.rs
prodnb-midi/: Cargo.toml
prodnb-midi/src/: events.rs  lib.rs  patterns.rs  strudel.rs  tracks.rs
prodnb-tui/: Cargo.toml
prodnb-tui/src/: app.rs  input.rs  lib.rs  llm.rs  ui.rs  widgets.rs
prodnb-web/: .env.example  Cargo.toml  README.md  beat_templates.md  strudel_knowledge.md
prodnb-web/src/: handlers.rs  lib.rs  main.rs  templates.rs
prodnb-web/static/css/: style.css
prodnb-web/static/js/: app.js
prodnb-web/templates/: index.html
tasks/: todo.md
