[workspace]
members = [
    "prodnb-core",
    "prodnb-midi",
    "prodnb-audio",
    "prodnb-tui",
    "prodnb-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ProDnB Team"]

[workspace.dependencies]
pdbtbx = "0.12"
midly = "0.5"
rustysynth = "1.3"
cpal = "0.15"
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3"
spin = "0.9"
log = "0.4"
env_logger = "0.11"
