[package]
name = "prodnb-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rustysynth = { workspace = true }
cpal = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
prodnb-midi = { path = "../prodnb-midi" }
prodnb-core = { path = "../prodnb-core" }
log = { workspace = true }
spin = "0.9"
